amélioration qualité de la vidéo promo

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </ul>
                 <video id="myVideo" class="model-video reveal " autoplay muted playsinline loading="lazy"
                     aria-label="Vidéo de démonstration du Fujifilm X100VI">
-                    <source src="./video/compress/x100vi.mp4" type="video/mp4">
+                    <source src="./video/x100vi.mp4" type="video/mp4">
                     <!-- fallback img -->
                     <img loading="lazy" src="./images/x100vi/compress/x100vi.webp" alt="Fujifilm X100VI promotional loop">
                 </video>
